--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
               uses: actions/setup-node@v1
               with:
                   node-version: '12.x'
+
+            - name: Install packages
               run: npm install
 
             - name: Run tests
