--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,5 @@ version: '3'
 services:
 
     marketbot:
-        build:
-            context: ./
-        env_file:
-            - .env
+        build: .
         restart: unless-stopped
