Revert "Remove .env file requirement"
This reverts commit 76ff42da

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,8 @@ version: '3'
 services:
 
     marketbot:
-        build: .
+        build:
+            context: ./
+        env_file:
+            - .env
         restart: unless-stopped
