--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "dist/**/*"
     ],
     "scripts": {
+        "typeorm": "node --require ts-node/register node_modules/typeorm/cli.js",
         "clean": "npx -q rimraf dist",
         "build": "npm run clean && tsc --project tsconfig.json",
         "lint": "npm run lint:src && npm run lint:test",
