--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     ],
     "scripts": {
         "typeorm": "node --require ts-node/register node_modules/typeorm/cli.js",
+        "migrate": "npm run typeorm migration:run",
         "clean": "npx -q rimraf dist",
         "build": "npm run clean && tsc --project tsconfig.json",
         "lint": "npm run lint:src && npm run lint:test",
@@ -16,7 +17,7 @@
         "lint:test": "tslint -c tslint.json src/**/*.spec.ts --format stylish",
         "pretest": "npm run lint",
         "test": "echo \"Error: no test specified\" && exit 0",
-        "start": "node ./dist/main.js",
+        "start": "npm run migrate && node ./dist/main.js",
         "preversion": "npm run test"
     },
     "keywords": [],
