--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     },
     "dependencies": {
         "@ionaru/esi-service": "^3.2.2",
-        "@ionaru/eve-utils": "^4.3.0",
+        "@ionaru/eve-utils": "^4.3.1-52.0",
         "@ionaru/format-number": "^2.0.0",
         "agentkeepalive": "^4.1.0",
         "axios": "^0.19.0",
