--- a/package.json
+++ b/package.json
@@ -16,9 +16,21 @@
         "lint:src": "tslint --project tsconfig.json -c tslint.json --format stylish",
         "lint:test": "tslint -c tslint.json src/**/*.spec.ts --format stylish",
         "pretest": "npm run lint",
-        "test": "echo \"Error: no test specified\" && exit 0",
+        "test": "jest src",
+        "posttest": "codecov -f coverage/*.json",
         "start": "npm run migrate && node ./dist/main.js",
         "preversion": "npm run test"
+    },
+    "jest": {
+        "collectCoverage": true,
+        "collectCoverageFrom": [
+            "src/**/*.ts",
+            "!src/**/*.d.ts",
+            "!src/**/*.spec.ts",
+            "!dist/**/*"
+        ],
+        "preset": "ts-jest",
+        "testEnvironment": "node"
     },
     "keywords": [],
     "author": "Jeroen Akkerman",
@@ -28,8 +40,11 @@
         "@types/countdown": "0.0.7",
         "@types/debug": "^4.1.5",
         "@types/escape-string-regexp": "^2.0.1",
+        "@types/jest": "^24.0.19",
         "@types/node": "^12.11.1",
         "@types/sqlite3": "^3.1.5",
+        "jest": "^24.9.0",
+        "ts-jest": "^24.1.0",
         "ts-node": "^8.4.1",
         "tslint": "5.20.0",
         "tslint-sonarts": "1.9.0",
