--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,6 +22,9 @@ jobs:
               with:
                   node-version: '12.x'
 
+            - name: Audit
+              run: npm audit
+
             - name: Install packages
               run: npm install
 
