--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
         "@types/countdown": "0.0.7",
         "@types/debug": "^4.1.5",
         "@types/escape-string-regexp": "^2.0.1",
-        "@types/jest": "^24.0.19",
-        "@types/node": "^12.11.1",
+        "@types/jest": "^24.0.21",
+        "@types/node": "^12.12.3",
         "@types/sqlite3": "^3.1.5",
         "jest": "^24.9.0",
         "ts-jest": "^24.1.0",
@@ -51,7 +51,7 @@
     },
     "dependencies": {
         "@ionaru/esi-service": "^3.2.2",
-        "@ionaru/eve-utils": "^4.3.1-52.0",
+        "@ionaru/eve-utils": "^4.4.0",
         "@ionaru/format-number": "^2.0.0",
         "agentkeepalive": "^4.1.0",
         "axios": "^0.19.0",
