--- a/package.json
+++ b/package.json
@@ -36,18 +36,18 @@
     "repository": "github:Ionaru/TheraBot",
     "license": "MIT",
     "devDependencies": {
-        "@types/countdown": "0.0.7",
+        "@types/countdown": "^0.0.7",
         "@types/debug": "^4.1.5",
         "@types/escape-string-regexp": "^2.0.1",
-        "@types/jest": "^24.0.21",
-        "@types/node": "^12.12.3",
+        "@types/jest": "^24.0.23",
+        "@types/node": "^12.12.11",
         "@types/sqlite3": "^3.1.5",
         "jest": "^24.9.0",
         "ts-jest": "^24.1.0",
-        "ts-node": "^8.4.1",
-        "tslint": "5.20.0",
-        "tslint-sonarts": "1.9.0",
-        "typescript": "^3.6.4"
+        "ts-node": "^8.5.2",
+        "tslint": "^5.20.1",
+        "tslint-sonarts": "^1.9.0",
+        "typescript": "^3.7.2"
     },
     "dependencies": {
         "@ionaru/esi-service": "^3.2.2",
