--- a/package.json
+++ b/package.json
@@ -40,14 +40,15 @@
         "@types/debug": "^4.1.5",
         "@types/escape-string-regexp": "^2.0.1",
         "@types/jest": "^25.2.3",
-        "@types/node": "^14.0.10",
+        "@types/node": "^14.0.11",
         "@types/sqlite3": "^3.1.6",
+        "@types/ws": "^7.2.5",
         "jest": "^26.0.1",
         "ts-jest": "^26.1.0",
         "ts-node": "^8.10.2",
-        "tslint": "^5.20.1",
+        "tslint": "^6.1.2",
         "tslint-sonarts": "^1.9.0",
-        "typescript": "^3.9.3"
+        "typescript": "^3.9.5"
     },
     "dependencies": {
         "@ionaru/esi-service": "^4.0.0",
@@ -57,7 +58,7 @@
         "axios": "^0.19.2",
         "countdown": "^2.6.0",
         "debug": "^4.1.1",
-        "discord.js": "^11.5.1",
+        "discord.js": "^12.2.0",
         "escape-string-regexp": "^4.0.0",
         "reflect-metadata": "^0.1.13",
         "sqlite3": "^4.2.0",
