--- a/package.json
+++ b/package.json
@@ -39,29 +39,30 @@
         "@types/countdown": "^0.0.7",
         "@types/debug": "^4.1.5",
         "@types/escape-string-regexp": "^2.0.1",
-        "@types/jest": "^26.0.0",
-        "@types/node": "^14.0.13",
+        "@types/jest": "^26.0.20",
+        "@types/node": "^14.14.22",
         "@types/sqlite3": "^3.1.6",
-        "@types/ws": "^7.2.5",
-        "jest": "^26.0.1",
-        "ts-jest": "^26.1.0",
-        "ts-node": "^8.10.2",
-        "tslint": "^6.1.2",
+        "@types/ws": "^7.4.0",
+        "jest": "^26.6.3",
+        "ts-jest": "^26.4.4",
+        "ts-node": "^9.1.1",
+        "tslint": "^6.1.3",
         "tslint-sonarts": "^1.9.0",
-        "typescript": "^3.9.5"
+        "typescript": "^4.1.3"
     },
     "dependencies": {
-        "@ionaru/esi-service": "^4.0.0",
-        "@ionaru/eve-utils": "^7.1.0",
+        "@ionaru/esi-service": "^5.0.0",
+        "@ionaru/eve-utils": "^7.3.1",
         "@ionaru/format-number": "^3.0.1",
         "agentkeepalive": "^4.1.3",
-        "axios": "^0.19.2",
+        "axios": "^0.21.1",
         "countdown": "^2.6.0",
-        "debug": "^4.1.1",
-        "discord.js": "^12.2.0",
+        "debug": "^4.3.1",
+        "discord.js": "^12.5.1",
         "escape-string-regexp": "^4.0.0",
+        "http-status-codes": "^2.1.4",
         "reflect-metadata": "^0.1.13",
-        "sqlite3": "^4.2.0",
-        "typeorm": "^0.2.25"
+        "sqlite3": "^5.0.1",
+        "typeorm": "^0.2.30"
     }
 }
