--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,12 +18,12 @@ jobs:
               uses: actions/checkout@v1
 
             - name: Set up Node.js
-              uses: actions/setup-node@v1.1.0
+              uses: actions/setup-node@v2
               with:
-                  node-version: '12.x'
+                  node-version: '14'
 
             - name: Audit
-              run: npm audit --production
+              run: npm audit
 
             - name: Install packages
               run: npm install
