--- a/package.json
+++ b/package.json
@@ -36,33 +36,41 @@
     "repository": "github:Ionaru/TheraBot",
     "license": "MIT",
     "devDependencies": {
+        "@ionaru/eslint-config": "^6.2.1",
         "@types/countdown": "^0.0.7",
-        "@types/debug": "^4.1.5",
+        "@types/debug": "^4.1.6",
         "@types/escape-string-regexp": "^2.0.1",
-        "@types/jest": "^26.0.20",
-        "@types/node": "^14.14.22",
-        "@types/sqlite3": "^3.1.6",
-        "@types/ws": "^7.4.0",
-        "jest": "^26.6.3",
-        "ts-jest": "^26.4.4",
-        "ts-node": "^9.1.1",
-        "tslint": "^6.1.3",
-        "tslint-sonarts": "^1.9.0",
-        "typescript": "^4.1.3"
+        "@types/jest": "^27",
+        "@types/node": "^16.0.0",
+        "@types/sqlite3": "^3.1.7",
+        "@types/ws": "^7.4.6",
+        "@typescript-eslint/eslint-plugin": "^5.17.0",
+        "eslint": "^8.12.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jest": "^26.1.3",
+        "eslint-plugin-no-null": "^1.0.2",
+        "eslint-plugin-prefer-arrow": "^1.2.3",
+        "eslint-plugin-sonarjs": "^0.12.0",
+        "eslint-plugin-unicorn": "^41.0.1",
+        "jest": "^27.0.6",
+        "ts-jest": "^27.0.3",
+        "ts-node": "^10.0.0",
+        "typescript": "^4.3.5"
     },
     "dependencies": {
         "@ionaru/esi-service": "^5.0.0",
         "@ionaru/eve-utils": "^7.3.1",
         "@ionaru/format-number": "^3.0.1",
-        "agentkeepalive": "^4.1.3",
+        "agentkeepalive": "^4.1.4",
         "axios": "^0.21.1",
         "countdown": "^2.6.0",
-        "debug": "^4.3.1",
-        "discord.js": "^12.5.1",
+        "debug": "^4.3.2",
+        "discord.js": "^12.5.3",
+        "dotenv": "^10.0.0",
         "escape-string-regexp": "^4.0.0",
         "http-status-codes": "^2.1.4",
         "reflect-metadata": "^0.1.13",
-        "sqlite3": "^5.0.0",
-        "typeorm": "^0.2.30"
+        "sqlite3": "^5.0.2",
+        "typeorm": "^0.2.34"
     }
 }
