Upgrade Discord.js and fix tests

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
         "clean": "npx -q rimraf dist",
         "build": "npm run clean && tsc --project tsconfig.json",
         "lint": "npm run lint:src && npm run lint:test",
-        "lint:src": "tslint --project tsconfig.json -c tslint.json --format stylish",
-        "lint:test": "tslint -c tslint.json src/**/*.spec.ts --format stylish",
+        "lint:src": "eslint --ext ts --max-warnings 0 --ignore-pattern *.spec.ts src",
+        "lint:test": "eslint --ext ts --plugin jest --env jest/globals src/**/*.spec.ts",
         "pretest": "npm run lint",
         "test": "jest src",
         "start": "npm run migrate && node ./dist/main.js",
@@ -40,10 +40,9 @@
         "@types/countdown": "^0.0.8",
         "@types/debug": "^4.1.6",
         "@types/escape-string-regexp": "^2.0.1",
-        "@types/jest": "^27",
+        "@types/jest": "^27.4.1",
         "@types/node": "^16.0.0",
         "@types/sqlite3": "^3.1.7",
-        "@types/ws": "^7.4.6",
         "@typescript-eslint/eslint-plugin": "^5.18.0",
         "eslint": "^8.12.0",
         "eslint-plugin-import": "^2.25.4",
@@ -65,7 +64,7 @@
         "axios": "^0.26.1",
         "countdown": "^2.6.0",
         "debug": "^4.3.2",
-        "discord.js": "^12.5.3",
+        "discord.js": "^13.6.0",
         "dotenv": "^16.0.0",
         "escape-string-regexp": "^4.0.0",
         "http-status-codes": "^2.1.4",
