--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@ionaru/format-number": "^4.0.1",
         "agentkeepalive": "^4.1.4",
         "axios": "^0.26.1",
+        "better-sqlite3": "^7.5.0",
         "countdown": "^2.6.0",
         "debug": "^4.3.2",
         "discord.js": "^13.6.0",
@@ -69,7 +70,6 @@
         "escape-string-regexp": "^4.0.0",
         "http-status-codes": "^2.1.4",
         "reflect-metadata": "^0.1.13",
-        "sqlite3": "^5.0.2",
         "typeorm": "^0.2.34"
     }
 }
