--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "typeorm": "node --require ts-node/register node_modules/typeorm/cli.js",
         "migrate": "npm run typeorm migration:run",
         "clean": "npx -q rimraf dist",
-        "build": "npm run clean && tsc --project tsconfig.json",
+        "prebuild": "npm run clean",
+        "build": "tsc --project tsconfig.json",
         "lint": "npm run lint:src && npm run lint:test",
         "lint:src": "eslint --ext ts --max-warnings 0 --ignore-pattern *.spec.ts src",
         "lint:test": "eslint --ext ts --plugin jest --env jest/globals src/**/*.spec.ts",
@@ -53,7 +54,7 @@
         "jest": "^27.0.6",
         "ts-jest": "^27.0.3",
         "ts-node": "^10.0.0",
-        "typescript": "^4.3.5"
+        "typescript": "~4.7.4"
     },
     "dependencies": {
         "@ionaru/esi-service": "^6.1.0",
@@ -64,11 +65,12 @@
         "better-sqlite3": "^7.5.0",
         "countdown": "^2.6.0",
         "debug": "^4.3.2",
-        "discord.js": "^13.6.0",
+        "discord.js": "^14.3.0",
         "dotenv": "^16.0.0",
         "escape-string-regexp": "^4.0.0",
         "http-status-codes": "^2.1.4",
         "reflect-metadata": "^0.1.13",
+        "slash-create": "^5.8.0",
         "typeorm": "^0.2.34"
     }
 }
