--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "noUnusedParameters": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
+        "allowSyntheticDefaultImports": true,
         "removeComments": false,
         "resolveJsonModule": true,
         "lib": [
