--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     ],
     "scripts": {
         "typeorm": "node --require ts-node/register node_modules/typeorm/cli.js",
-        "migrate": "npm run typeorm migration:run",
+        "migrate": "npm run typeorm migration:run -- -d ormconfig.js",
         "clean": "npx -q rimraf dist",
         "prebuild": "npm run clean",
         "build": "tsc --project tsconfig.json",
@@ -37,40 +37,40 @@
     "repository": "github:Ionaru/TheraBot",
     "license": "MIT",
     "devDependencies": {
-        "@ionaru/eslint-config": "^6.3.0",
-        "@types/countdown": "^0.0.8",
-        "@types/debug": "^4.1.6",
+        "@ionaru/eslint-config": "^13.0.0",
+        "@types/countdown": "^0.0.9",
+        "@types/debug": "^4.1.9",
         "@types/escape-string-regexp": "^2.0.1",
-        "@types/jest": "^27.4.1",
-        "@types/node": "^16.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.18.0",
-        "eslint": "^8.12.0",
-        "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-jest": "^26.1.3",
+        "@types/jest": "^29.5.5",
+        "@types/node": "^20.8.3",
+        "@typescript-eslint/eslint-plugin": "^6.7.4",
+        "eslint": "^8.51.0",
+        "eslint-plugin-import": "^2.28.1",
+        "eslint-plugin-jest": "^27.4.2",
         "eslint-plugin-no-null": "^1.0.2",
         "eslint-plugin-prefer-arrow": "^1.2.3",
-        "eslint-plugin-sonarjs": "^0.13.0",
-        "eslint-plugin-unicorn": "^42.0.0",
-        "jest": "^27.0.6",
-        "ts-jest": "^27.0.3",
-        "ts-node": "^10.0.0",
-        "typescript": "~4.7.4"
+        "eslint-plugin-sonarjs": "^0.21.0",
+        "eslint-plugin-unicorn": "^48.0.1",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
+        "typescript": "~5.2.2"
     },
     "dependencies": {
         "@ionaru/esi-service": "^6.1.0",
         "@ionaru/eve-utils": "^8.0.0",
-        "@ionaru/format-number": "^4.0.1",
-        "agentkeepalive": "^4.1.4",
+        "@ionaru/format-number": "^5.0.0",
+        "agentkeepalive": "^4.5.0",
         "axios": "^0.26.1",
-        "better-sqlite3": "^7.5.0",
+        "better-sqlite3": "^8.7.0",
         "countdown": "^2.6.0",
-        "debug": "^4.3.2",
-        "discord.js": "^14.3.0",
-        "dotenv": "^16.0.0",
+        "debug": "^4.3.4",
+        "discord.js": "^14.13.0",
+        "dotenv": "^16.3.1",
         "escape-string-regexp": "^4.0.0",
-        "http-status-codes": "^2.1.4",
+        "http-status-codes": "^2.3.0",
         "reflect-metadata": "^0.1.13",
-        "slash-create": "^5.8.0",
-        "typeorm": "^0.2.34"
+        "slash-create": "^5.14.0",
+        "typeorm": "^0.3.17"
     }
 }
